Update logo assets in index.html with new images and add additional logos for enhanced branding; include new logo files in the assets directory.

--- a/index.html
+++ b/index.html
@@ -83,35 +83,55 @@
             <div class="st-logo-slider-wrap">
               <div class="st-logo-slider-track">
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo1.png" alt="Logo 1">
+                  <img src="assets/img/logo/allbeirut.avif" alt="Logo 1">
                 </div>
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo2.png" alt="Logo 2">
+                  <img src="assets/img/logo/atlys.jpeg" alt="Logo 2">
                 </div>
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo3.png" alt="Logo 3">
+                  <img src="assets/img/logo/js.jpeg" alt="Logo 3">
                 </div>
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo4.png" alt="Logo 4">
+                  <img src="assets/img/logo/ibn.jpeg" alt="Logo 4">
                 </div>
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo5.png" alt="Logo 5">
+                  <img src="assets/img/logo/power.jpeg" alt="Logo 3">
                 </div>
+
+                <div class="st-logo-slide">
+                  <img src="assets/img/logo/swing.jpeg" alt="Logo 2">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logo/p&b.jpeg" alt="Logo 1">
+                </div>
+
+
+                <div class="st-logo-slide">
+                  <img src="assets/img/logo/bombay.jpeg" alt="Logo 4">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logo/thebody.jpeg" alt="Logo 5">
+                </div>
+                <div class="st-logo-slide">
+                  <img src="assets/img/logo/zadea.jpeg" alt="Logo 5">
+                </div>
+
                 <!-- Duplicate slides for seamless loop -->
+
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo1.png" alt="Logo 1">
+                  <img src="assets/img/logo/allbeirut.avif" alt="Logo 1">
                 </div>
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo2.png" alt="Logo 2">
+                  <img src="assets/img/logo/atlys.jpeg" alt="Logo 2">
                 </div>
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo3.png" alt="Logo 3">
+                  <img src="assets/img/logo/js.jpeg" alt="Logo 3">
                 </div>
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo4.png" alt="Logo 4">
+                  <img src="assets/img/logo/ibn.jpeg" alt="Logo 4">
                 </div>
                 <div class="st-logo-slide">
-                  <img src="assets/img/logos/logo5.png" alt="Logo 5">
+                  <img src="assets/img/logo/power.jpeg" alt="Logo 3">
                 </div>
               </div>
             </div>
