Update resume section in index.html: add new role as Content Creator at Blackspoon, adjust duration for Videographer position, and reintroduce Video Editor role at Pipa Media Agency with updated details for improved clarity and presentation.

--- a/index.html
+++ b/index.html
@@ -468,8 +468,25 @@
 
             <div class="st-resume-timeline-wrap">
               <div class="st-resume-timeline">
+                <h3 class="st-resume-timeline-title">Content Creator</h3>
+                <div class="st-resume-timeline-duration">September 2024 - June 2025</div>
+                <h4 class="st-resume-timeline-subtitle">Blackspoon, Dubai</h4>
+                <div class="st-resume-timeline-text">
+                  <p>Produced high-quality photo and video content for leading F&B brands including Allo Beirut, Bombay
+                    Bungalow, Ibn Al Bahr, Patty & Bun, and Swingers.</p>
+                  <p>Shot and edited menu photography, PR/event visuals, and promotional videos using Lightroom, Adobe
+                    Premiere Pro, and CapCut.</p>
+                  <p>Created engaging TikTok content for BlackSpoon, Allo Beirut, and Bombay Bungalow, tailored for
+                    performance on social platforms.</p>
+                  <p>Managed full content creation workflow: planning, filming, editing, and post-production to align
+                    with brand guidelines and marketing goals.</p>
+                </div>
+              </div> <!-- st-resume-timeline -->
+              <div class="st-height-b50 st-height-lg-b30"></div>
+
+              <div class="st-resume-timeline">
                 <h3 class="st-resume-timeline-title">Videographer</h3>
-                <div class="st-resume-timeline-duration">June 2023 - Present</div>
+                <div class="st-resume-timeline-duration">June 2023 - Aug 2024</div>
                 <h4 class="st-resume-timeline-subtitle">Kyan Creative Studio, Dubai</h4>
                 <div class="st-resume-timeline-text">
                   <p>Operated a wide range of professional cameras including DSLRs', REDs, and ENG Cameras.</p>
@@ -499,20 +516,7 @@
                     inspirer)</p>
                 </div>
               </div> <!-- st-resume-timeline -->
-              <div class="st-height-b50 st-height-lg-b30"></div>
-              <div class="st-resume-timeline">
 
-
-
-                <h3 class="st-resume-timeline-title">Video Editor, Tiktok Management</h3>
-                <div class="st-resume-timeline-duration">May 2020- June 2021</div>
-                <h4 class="st-resume-timeline-subtitle">Pipa Media Agency, Dubai</h4>
-                <div class="st-resume-timeline-text">
-                  <p>Collaborated with companies as a video and photo editor for commercial shoots, events, and car
-                    advertisements</p>
-                </div>
-              </div>
-              <div class="st-height-b50 st-height-lg-b30"></div>
             </div>
           </div>
         </div>
@@ -528,6 +532,21 @@
             <div class="st-height-b50 st-height-lg-b30"></div>
 
             <div class="st-resume-timeline-wrap">
+
+              <div class="st-height-b50 st-height-lg-b30"></div>
+              <div class="st-resume-timeline">
+
+
+
+                <h3 class="st-resume-timeline-title">Video Editor, Tiktok Management</h3>
+                <div class="st-resume-timeline-duration">May 2020- June 2021</div>
+                <h4 class="st-resume-timeline-subtitle">Pipa Media Agency, Dubai</h4>
+                <div class="st-resume-timeline-text">
+                  <p>Collaborated with companies as a video and photo editor for commercial shoots, events, and car
+                    advertisements</p>
+                </div>
+              </div>
+              <div class="st-height-b50 st-height-lg-b30"></div>
 
               <div class="st-resume-timeline">
                 <h3 class="st-resume-timeline-title">Real Estate Photographer</h3>
