Update social media links in index.html: replace Instagram link, correct LinkedIn URL, and comment out unused Facebook, TikTok, and Twitter links for improved organization and accuracy.

--- a/index.html
+++ b/index.html
@@ -145,19 +145,20 @@
 
       <div class="st-social-group wow fadeInLeft">
         <div class="st-social-link">
-          <a href="https://www.instagram.com/swaggyink" class="st-social-btn">
+          <a href="https://www.instagram.com/alixjabir?igsh=MXZndHIydDI0ZWdneg%3D%3D&utm_source=qr"
+            class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-instagram"></i></span>
             <span class="st-icon-name">Instagram</span>
           </a>
-          <a href="https://www.linkedin.com/in/ali-ahmed-muhsin-4a8823160?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+          <a href="https://www.linkedin.com/in/ali-muhsin-4a8823160?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
             class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
             <span class="st-icon-name">LinkedIn</span>
           </a>
-          <a href="https://www.tiktok.com/@thirteen.31?_t=8lnvWQXpkZU&_r=1" class="st-social-btn">
+          <!-- <a href="https://www.tiktok.com/@thirteen.31?_t=8lnvWQXpkZU&_r=1" class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-tiktok"></i></span>
             <span class="st-icon-name">Tiktok</span>
-          </a>
+          </a> -->
 
         </div>
       </div>
@@ -688,27 +689,28 @@
             <div class="st-social-info">
               <div class="st-social-text">Visite my social profile and get connected</div>
               <div class="st-social-link">
-                <a href="https://www.facebook.com/aloo.cent" class="st-social-btn active">
+                <!-- <a href="https://www.facebook.com/aloo.cent" class="st-social-btn active">
                   <span class="st-social-icon"><i class="fab fa-facebook"></i></span>
                   <span class="st-icon-name">Facebook</span>
-                </a>
-                <a href="https://www.instagram.com/swaggyink" class="st-social-btn">
+                </a> -->
+                <a href="https://www.instagram.com/alixjabir?igsh=MXZndHIydDI0ZWdneg%3D%3D&utm_source=qr"
+                  class="st-social-btn">
                   <span class="st-social-icon"><i class="fab fa-instagram"></i></span>
                   <span class="st-icon-name">Instagram</span>
                 </a>
-                <a href="https://twitter.com/swaggyink1" class="st-social-btn">
+                <!-- <a href="https://twitter.com/swaggyink1" class="st-social-btn">
                   <span class="st-social-icon"><i class="fab fa-twitter"></i></span>
                   <span class="st-icon-name">Twitter</span>
-                </a>
-                <a href="https://www.linkedin.com/in/ali-ahmed-muhsin-4a8823160?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+                </a> -->
+                <a href="https://www.linkedin.com/in/ali-muhsin-4a8823160?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
                   class="st-social-btn">
                   <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
                   <span class="st-icon-name">LinkedIn</span>
                 </a>
-                <a href="https://www.tiktok.com/@thirteen.31?_t=8lnvWQXpkZU&_r=1" class="st-social-btn">
+                <!-- <a href="https://www.tiktok.com/@thirteen.31?_t=8lnvWQXpkZU&_r=1" class="st-social-btn">
                   <span class="st-social-icon"><i class="fab fa-tiktok"></i></span>
                   <span class="st-icon-name">Tiktok</span>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
